--- a/style.css
+++ b/style.css
@@ -6,6 +6,36 @@ html, body {
 div {
 	margin: 0.5em;
 }
+#shelf {
+	margin: 0.5em;
+	padding: 0;
+}
+#shelf li {
+	position: relative;
+	display: block;
+	border: 1px solid black;
+	border-radius: 3px;
+	height: 3em;
+	line-height: 3em;
+	margin: 0.5em 0;
+	padding: 0 0 0 1em;
+}
+#shelf li a {
+	text-decoration: none;
+	color: black;
+	display: block;
+}
+#shelf li .remove {
+	position: absolute;
+	right: 0;
+	top: 0;
+	height: 3em;
+	width: 2em;
+	font-weight: bold;
+	background-color: black;
+	color: white;
+	text-align: center;
+}
 iframe {
 	margin: 0px;
 	border: none;
@@ -32,4 +62,9 @@ button {
 	text-align: center;
 	border: none;
 	border-radius: 2px;
+}
+label {
+	display: block;
+	line-height: 2;
+	margin-top: 1em;
 }
